--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
+    "moment": "^2.29.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
